packages/go/include/html_to_markdown.h


typedef struct HTMConversionOptions HTMConversionOptions;
typedef struct HTMConversionOptionsUpdate HTMConversionOptionsUpdate;
typedef struct HTMConversionResult HTMConversionResult;
typedef struct HTMHeaderMetadata HTMHeaderMetadata;
typedef struct HTMPreprocessingOptions HTMPreprocessingOptions;
typedef struct HTMPreprocessingOptionsUpdate HTMPreprocessingOptionsUpdate;
typedef struct HTMVisitorHandle HTMVisitorHandle;
typedef struct HTMHtmHtmlVisitorBridge HTMHtmHtmlVisitorBridge;
typedef struct HTMHtmHtmlVisitorVTable {
  int32_t (*visit_text)(const void *user_data,
                        const char *_ctx,
                        const char *_text,
                        char **out_result);
  int32_t (*visit_element_start)(const void *user_data,
                                 const char *_ctx,
                                 char **out_result);
  int32_t (*visit_element_end)(const void *user_data,
                               const char *_ctx,
                               const char *_output,
                               char **out_result);
  int32_t (*visit_link)(const void *user_data,
                        const char *_ctx,
                        const char *_href,
                        const char *_text,
                        const char *_title,
                        char **out_result);
  int32_t (*visit_image)(const void *user_data,
                         const char *_ctx,
                         const char *_src,
                         const char *_alt,
                         const char *_title,
                         char **out_result);
  int32_t (*visit_heading)(const void *user_data,
                           const char *_ctx,
                           uint32_t _level,
                           const char *_text,
                           const char *_id,
                           char **out_result);
  int32_t (*visit_code_block)(const void *user_data,
                              const char *_ctx,
                              const char *_lang,
                              const char *_code,
                              char **out_result);
  int32_t (*visit_code_inline)(const void *user_data,
                               const char *_ctx,
                               const char *_code,
                               char **out_result);
  int32_t (*visit_list_item)(const void *user_data,
                             const char *_ctx,
                             int32_t _ordered,
                             const char *_marker,
                             const char *_text,
                             char **out_result);
  int32_t (*visit_list_start)(const void *user_data,
                              const char *_ctx,
                              int32_t _ordered,
                              char **out_result);
  int32_t (*visit_list_end)(const void *user_data,
                            const char *_ctx,
                            int32_t _ordered,
                            const char *_output,
                            char **out_result);
  int32_t (*visit_table_start)(const void *user_data,
                               const char *_ctx,
                               char **out_result);
  int32_t (*visit_table_row)(const void *user_data,
                             const char *_ctx,
                             const char *_cells,
                             int32_t _is_header,
                             char **out_result);
  int32_t (*visit_table_end)(const void *user_data,
                             const char *_ctx,
                             const char *_output,
                             char **out_result);
  int32_t (*visit_blockquote)(const void *user_data,
                              const char *_ctx,
                              const char *_content,
                              uintptr_t _depth,
                              char **out_result);
  int32_t (*visit_strong)(const void *user_data,
                          const char *_ctx,
                          const char *_text,
                          char **out_result);
  int32_t (*visit_emphasis)(const void *user_data,
                            const char *_ctx,
                            const char *_text,
                            char **out_result);
  int32_t (*visit_strikethrough)(const void *user_data,
                                 const char *_ctx,
                                 const char *_text,
                                 char **out_result);
  int32_t (*visit_underline)(const void *user_data,
                             const char *_ctx,
                             const char *_text,
                             char **out_result);
  int32_t (*visit_subscript)(const void *user_data,
                             const char *_ctx,
                             const char *_text,
                             char **out_result);
  int32_t (*visit_superscript)(const void *user_data,
                               const char *_ctx,
                               const char *_text,
                               char **out_result);
  int32_t (*visit_mark)(const void *user_data,
                        const char *_ctx,
                        const char *_text,
                        char **out_result);
  int32_t (*visit_line_break)(const void *user_data,
                              const char *_ctx,
                              char **out_result);
  int32_t (*visit_horizontal_rule)(const void *user_data,
                                   const char *_ctx,
                                   char **out_result);
  int32_t (*visit_custom_element)(const void *user_data,
                                  const char *_ctx,
                                  const char *_tag_name,
                                  const char *_html,
                                  char **out_result);
  int32_t (*visit_definition_list_start)(const void *user_data,
                                         const char *_ctx,
                                         char **out_result);
  int32_t (*visit_definition_term)(const void *user_data,
                                   const char *_ctx,
                                   const char *_text,
                                   char **out_result);
  int32_t (*visit_definition_description)(const void *user_data,
                                          const char *_ctx,
                                          const char *_text,
                                          char **out_result);
  int32_t (*visit_definition_list_end)(const void *user_data,
                                       const char *_ctx,
                                       const char *_output,
                                       char **out_result);
  int32_t (*visit_form)(const void *user_data,
                        const char *_ctx,
                        const char *_action,
                        const char *_method,
                        char **out_result);
  int32_t (*visit_input)(const void *user_data,
                         const char *_ctx,
                         const char *_input_type,
                         const char *_name,
                         const char *_value,
                         char **out_result);
  int32_t (*visit_button)(const void *user_data,
                          const char *_ctx,
                          const char *_text,
                          char **out_result);
  int32_t (*visit_audio)(const void *user_data,
                         const char *_ctx,
                         const char *_src,
                         char **out_result);
  int32_t (*visit_video)(const void *user_data,
                         const char *_ctx,
                         const char *_src,
                         char **out_result);
  int32_t (*visit_iframe)(const void *user_data,
                          const char *_ctx,
                          const char *_src,
                          char **out_result);
  int32_t (*visit_details)(const void *user_data,
                           const char *_ctx,
                           int32_t _open,
                           char **out_result);
  int32_t (*visit_summary)(const void *user_data,
                           const char *_ctx,
                           const char *_text,
                           char **out_result);
  int32_t (*visit_figure_start)(const void *user_data,
                                const char *_ctx,
                                char **out_result);
  int32_t (*visit_figcaption)(const void *user_data,
                              const char *_ctx,
                              const char *_text,
                              char **out_result);
  int32_t (*visit_figure_end)(const void *user_data,
                              const char *_ctx,
                              const char *_output,
                              char **out_result);
  void (*free_user_data)(void*);
} HTMHtmHtmlVisitorVTable;
int32_t htm_last_error_code(void);
const char *htm_last_error_context(void);
void htm_free_string(char *ptr);
void htm_free_bytes(uint8_t *ptr,
                    uintptr_t len,
                    uintptr_t cap);
int32_t htm_header_metadata_is_valid(const HTMHeaderMetadata *this_);
HTMConversionOptions *htm_conversion_options_from_json(const char *json);
char *htm_conversion_options_to_json(const HTMConversionOptions *ptr);
void htm_conversion_options_free(HTMConversionOptions *ptr);
HTMConversionOptions *htm_conversion_options_default(void);
HTMConversionOptions *htm_conversion_options_from(const HTMConversionOptionsUpdate *update);
HTMConversionOptionsUpdate *htm_conversion_options_update_from_json(const char *json);
void htm_conversion_options_update_free(HTMConversionOptionsUpdate *ptr);
char *htm_preprocessing_options_to_json(const HTMPreprocessingOptions *ptr);
void htm_preprocessing_options_free(HTMPreprocessingOptions *ptr);
HTMPreprocessingOptions *htm_preprocessing_options_default(void);
HTMPreprocessingOptions *htm_preprocessing_options_from(const HTMPreprocessingOptionsUpdate *update);
HTMPreprocessingOptionsUpdate *htm_preprocessing_options_update_from_json(const char *json);
void htm_preprocessing_options_update_free(HTMPreprocessingOptionsUpdate *ptr);
char *htm_conversion_result_to_json(const HTMConversionResult *ptr);
void htm_conversion_result_free(HTMConversionResult *ptr);
void htm_visitor_handle_free(HTMVisitorHandle *ptr);
void htm_options_set_visitor(HTMConversionOptions *options,
                             struct HTMHtmHtmlVisitorBridge *visitor);
HTMConversionResult *htm_convert(const char *html,
                                 const HTMConversionOptions *options);
struct HTMHtmHtmlVisitorBridge *htm_htm_html_visitor_bridge_new(const struct HTMHtmHtmlVisitorVTable *vtable,
                                                                const void *user_data);
void htm_htm_html_visitor_bridge_free(struct HTMHtmHtmlVisitorBridge *ptr);