packages/csharp/HtmlToMarkdown/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
// alef:hash:a955593d854dea4ba604111840ed0968a2fa4ffae5a0acbbe5d5147e28c75b24
#nullable enable

using System;
using System.Runtime.InteropServices;

namespace HtmlToMarkdown;

internal static partial class NativeMethods
{
    private const string LibName = "html_to_markdown_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_html_visitor_free")]
    internal static extern void HtmlVisitorFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_visitor_handle_free")]
    internal static extern void VisitorHandleFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_from_json")]
    internal static extern IntPtr ConversionOptionsFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_free")]
    internal static extern void ConversionOptionsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_update_from_json")]
    internal static extern IntPtr ConversionOptionsUpdateFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_update_free")]
    internal static extern void ConversionOptionsUpdateFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_preprocessing_options_update_from_json")]
    internal static extern IntPtr PreprocessingOptionsUpdateFromJson([MarshalAs(UnmanagedType.LPStr)] string json);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_preprocessing_options_update_free")]
    internal static extern void PreprocessingOptionsUpdateFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_to_json")]
    internal static extern IntPtr ConversionOptionsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_result_to_json")]
    internal static extern IntPtr ConversionResultToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_result_free")]
    internal static extern void ConversionResultFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_preprocessing_options_to_json")]
    internal static extern IntPtr PreprocessingOptionsToJson(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_preprocessing_options_free")]
    internal static extern void PreprocessingOptionsFree(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_convert")]
    internal static extern IntPtr Convert(
        [MarshalAs(UnmanagedType.LPStr)] string html,
        IntPtr options
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_header_metadata_is_valid")]
    internal static extern int HeaderMetadataIsValid(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_default")]
    internal static extern IntPtr ConversionOptionsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_conversion_options_from")]
    internal static extern IntPtr ConversionOptionsFrom(
        IntPtr update
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_preprocessing_options_default")]
    internal static extern IntPtr PreprocessingOptionsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_preprocessing_options_from")]
    internal static extern IntPtr PreprocessingOptionsFrom(
        IntPtr update
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_free_string")]
    internal static extern void FreeString(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_free_bytes")]
    internal static extern void FreeBytes(IntPtr ptr, UIntPtr len, UIntPtr cap);


    // Visitor FFI (HtmlVisitorBridge)
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_htm_html_visitor_bridge_new")]
    internal static extern IntPtr HtmlVisitorBridgeNew(IntPtr vtable, IntPtr userData);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_htm_html_visitor_bridge_free")]
    internal static extern void HtmlVisitorBridgeFree(IntPtr bridge);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_options_set_visitor")]
    internal static extern int ConversionOptionsSetVisitor(IntPtr options, IntPtr visitor);

    // Trait Bridge FFI

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "htm_register_html_visitor")]
    internal static extern int RegisterHtmlVisitor([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

}
